# praktikum

./: .default.nix.swp  README.md  result  rix_pack.R  shock_high.txt
inla_project/compare/: HI_6563s.fits  HI_6563s_1.fits  compare.html  compare.md  compare.org  diffs.fits  galactic_center_masked_0.fits  galactic_center_masked_20.fits  galactic_center_masked_40.fits  inla_fct.R  pyproject.toml  tries.R
inla_project/compare/astropy_conv/: diffs_0.fits  diffs_10.fits  diffs_20.fits  diffs_30.fits  diffs_40.fits  galactic_center_diffs_0.fits  galactic_center_diffs_10.fits  galactic_center_diffs_20.fits  galactic_center_diffs_30.fits  galactic_center_diffs_40.fits  galactic_center_filled_0.fits  galactic_center_filled_10.fits  galactic_center_filled_20.fits  galactic_center_filled_30.fits  galactic_center_filled_40.fits
inla_project/compare/astropy_fft/: diffs_0.fits  diffs_10.fits  diffs_30.fits  diffs_40.fits  galactic_center_diffs_0.fits  galactic_center_diffs_10.fits  galactic_center_diffs_20.fits  galactic_center_diffs_30.fits  galactic_center_diffs_40.fits  galactic_center_filled_0.fits  galactic_center_filled_10.fits  galactic_center_filled_20.fits  galactic_center_filled_30.fits  galactic_center_filled_40.fits
inla_project/compare/maskfilled/: diffs_0.fits  diffs_10.fits  diffs_20.fits  diffs_30.fits  diffs_40.fits  filled_0.fits  filled_10.fits  galactic_center_diffs_10.fits  galactic_center_diffs_20.fits  galactic_center_diffs_30.fits  galactic_center_diffs_40.fits  galactic_center_filled_20.fits  galactic_center_filled_30.fits  galactic_center_filled_40.fits
inla_project/compare/r-inla/: filled_0.fits  filled_10.fits  (+13 more)
mask/: H_fill.fits  N2_6583s.fits  N_fill.fits  O1_6300s.fits  README.md  README.org  inla_try.org  main_mask.py  mask.html  mask.md  mask.org  pyproject.toml
(+66 files in other folders)
