[tool.poetry]
name = "mask"
version = "0.1.0"
description = "using the maskfill package to remove LIS"
authors = ["dim-papach <dipapachristopoulos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
maskfill = {path = "maskfill"}
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
